# cpsl

./: .gitignore  .gitmodules  .gitmodules 2  AGENT-SYSTEM-PROMPT-GUIDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES  bench-python-luau.sh  cpsl-all.toml  cpsl-minimal.toml  pyrt.luau  run_tests.sh  shrt.luau
.cargo/: audit.toml
.github/workflows/: ci-image.yml  ci.yml  pages.yml
ci/: audit.sh  common.sh  docstring.sh  file-length.sh  function-length.sh
ci/docker/: compile.Dockerfile
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/tests/: build_integration.rs  run_integration.rs  sandboxes_rm_integration.rs
cli/tests/fixtures/: grep-fff.toml  grep-ripgrep.toml
core/: Cargo.toml
core/scripts/: download-pdfium.sh
core/src/: base64.rs  base64_codec.rs  calendar.rs  compress.rs  country.rs  crypto.rs  csv_mod.rs  datetime.rs  doc.rs  doc_reader.rs  edgar.rs  email.rs  fff.rs  fin.rs  fuzzy.rs  grep_api.rs  html_mod.rs  http.rs  image.rs  json.rs  lib.rs  location.rs  lua_util.rs  mount.rs  numpy.rs  pdfium_engine.rs  phone.rs  plot.rs  pyrt_compat.rs  qr.rs  random.rs  regex_mod.rs  sandbox.rs  sfae.rs  sh_transpile.rs  transpile.rs  url_mod.rs  webbrowser 2.rs  webbrowser.rs  webbrowser_tests 2.rs  (+4 more)
core/src/doc/: pdf_utils.rs  render.rs  vision.rs
core/src/doc_reader/: tests.rs
core/src/numpy/: doc.rs
core/src/plot/: doc.rs  register.rs
core/src/sandbox/: doc.rs  errors.rs  fs_read.rs  tests.rs
core/src/sh_transpile/: tests.rs
core/src/transpile/: errors.rs  maps.rs  tests.rs
core/tests/: base64_integration.rs  calendar_integration.rs  compat_bash.rs  compat_python.rs  country_integration.rs  crypto_integration.rs  csv_integration.rs  datetime_integration.rs  doc_integration.rs  edgar_integration.rs  email_integration.rs  fin_integration.rs  fs_comprehensive.rs  fs_integration.rs  fuzzy_integration.rs  html_integration.rs  http_integration.rs  image_integration.rs  json_integration.rs  numpy_integration.rs  param_enforcement.rs  pdf_pipeline.rs  pdfium_smoke.rs  phone_integration.rs  plot_integration.rs  qr_integration.rs  regex_integration.rs  shell_dispatch.rs  url_integration.rs  xml_integration.rs  yaml_integration.rs  yfinance_integration.rs
core/tests/compat/bash/advanced/: complex_pipelines.sh.expected  script_patterns.sh  script_patterns.sh.expected
core/tests/compat/bash/basics/: echo_extended.sh.expected  echo_n.sh  echo_n.sh.expected  graceful_stubs.sh
core/tests/compat/bash/control_flow/: extended_control.sh  for_loop.sh.expected  while_case_until.sh.expected
core/tests/compat/bash/file_ops/: basic_file_ops.sh  extended_file_ops.sh  extended_file_ops.sh.expected  hardware_info.sh.expected  synthetic_dirs.sh  synthetic_dirs.sh.expected
core/tests/compat/bash/pipelines/: basic_pipe.sh  pipes_and_redirects.sh  pipes_and_redirects.sh.expected
core/tests/compat/bash/text_processing/: text_tools.sh
core/tests/compat/bash/variables/: assignment.sh.expected  extended_vars.sh
core/tests/compat/python/basics/: arithmetic.py.expected  booleans.py  variables.py
core/tests/compat/python/builtins/: numeric.py  numeric.py.expected  random_module.py  random_module.py.expected  sequences.py  type_conversion.py
core/tests/compat/python/collections/: dicts.py.expected  tuples.py.expected
core/tests/compat/python/control_flow/: if_else.py  if_else.py.expected  loops.py  loops.py.expected
core/tests/compat/python/edge_cases/: edge_cases.py  edge_cases.py.expected
core/tests/compat/python/errors/: try_except.py
core/tests/compat/python/functions/: basic_functions.py  basic_functions.py.expected
core/tests/compat/python/strings/: string_methods.py  string_methods.py.expected  string_methods_extra.py  string_methods_extra.py.expected
cpsl-cli/: Cargo.toml
cpsl-cli/src/: config.rs  main.rs
cpsl-cli/tests/: build_integration.rs  run_integration.rs  sandboxes_rm_integration.rs
cpsl-core/: .gitignore  Cargo.toml
cpsl-core/src/: base64.rs  compress.rs  country.rs  crypto.rs  csv_mod.rs  datetime.rs  doc.rs  doc_reader.rs  edgar.rs  email.rs  fin.rs  fuzzy.rs  html_mod.rs  http.rs  image.rs  json.rs  lib.rs  lua_util.rs  mount.rs  numpy.rs  pdfium_engine.rs  phone.rs  plot.rs  pyrt_compat.rs  random.rs  regex_mod.rs  sandbox.rs  sfae.rs  sh_transpile.rs  transpile.rs  url_mod.rs  xml.rs  yaml.rs  yfinance.rs
cpsl-core/tests/: base64_integration.rs  (+30 more)
docs/: calendar-eventkit-v1-plan.md  distribution.md  feature-flags.md  grep-fff-api-parity-plan.md  grep-provider-config-plan.md  herm-cpsl-demo-plan.md  icloud-drive-cpsl-filesystem-design-review.md  icloud-drive-cpsl-filesystem-design.md  icloud-drive-cpsl-v1-implementation-plan.md  icloud-drive-read-only-mounting-v1-plan.md  module-api-design.md  modules.md  ripgrep-module-rename-plan.md
examples/: data-science.toml  full.toml  json-only.toml
ffi/: Cargo.toml  README.md
ffi/include/: cpsl.h
ffi/src/: lib.rs  vision.rs
ffi/tests/: probe.rs
manifests/: all.toml  data-science.toml  full.toml  json-only.toml  minimal.toml
modules/apple-calendar/: Cargo.toml
modules/apple-calendar/src/: lib.rs
modules/native-http/: Cargo.toml
modules/native-http/src/: gateway.rs  lib.rs  policy.rs  types.rs
modules/native-http/src/backend/: emscripten.rs  fallback.rs  macos.rs  mod.rs
modules/native-http/tests/: integration.rs
modules/native-webview-pdf/: Cargo.toml
modules/native-webview-pdf/src/: ios.rs  lib.rs  linux.rs  macos.rs  windows.rs
modules/native-webview-pdf/tests/: smoke.rs
native-http/: Cargo.toml
native-http/src/: lib.rs  policy.rs  types.rs
native-http/src/backend/: fallback.rs  macos.rs  mod.rs
native-http/tests/: integration.rs
native-webview-pdf/: Cargo.toml
runtime/: pyrt.luau  shrt.luau
test/: comprehensive.py  control_flow.py  dict_ops.py  error_test.py  fibonacci.py  fs_readwrite.py  fs_test.py  functional.py  hello.py  imports.py  list_ops.py  math_heavy.py  patterns.py  sorting.py  string_ops.py
web/: README.md  build.sh  server.sh
web/cpsl-web/: Cargo.toml  build.rs
web/cpsl-web/src/: main.rs
(+66 files in other folders)
