[package]
name = "cpsl-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "cpsl"
crate-type = ["cdylib"]

[features]
default = ["herm-minimal"]
herm-minimal = [
    "cpsl-core/mod-fs",
    "cpsl-core/mod-json",
    "cpsl-core/mod-csv",
    "cpsl-core/mod-http",
    "cpsl-core/mod-grep",
]
pdfium-render = ["cpsl-core/pdfium-render"]
all = ["cpsl-core/all", "pdfium-render"]

[dependencies]
cpsl-core = { path = "../core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
libloading = "0.8"
tempfile = "3"
