[package]
name = "cpsl-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "cpsl"
crate-type = ["cdylib"]

[features]
default = ["ffi-minimal"]
ffi-minimal = [
    "cpsl-core/mod-fs",
    "cpsl-core/mod-json",
    "cpsl-core/mod-csv",
    "cpsl-core/mod-http",
    "cpsl-core/mod-ripgrep",
]
webbrowser = ["ffi-minimal", "cpsl-core/mod-webbrowser"]
embedded-agent = [
    "ffi-minimal",
    "cpsl-core/mod-yaml",
    "cpsl-core/mod-xml",
    "cpsl-core/mod-doc",
    "cpsl-core/mod-plot",
    "cpsl-core/mod-numpy",
    "cpsl-core/mod-random",
    "cpsl-core/mod-fuzzy",
    "cpsl-core/mod-phone",
    "cpsl-core/mod-email",
    "cpsl-core/mod-country",
    "cpsl-core/mod-datetime",
    "cpsl-core/mod-image",
    "cpsl-core/mod-base64",
    "cpsl-core/mod-fin",
    "cpsl-core/mod-regex",
    "cpsl-core/mod-html",
    "cpsl-core/mod-url",
    "cpsl-core/mod-qr",
    "webbrowser",
    "pdfium-render",
]
pdfium-render = ["cpsl-core/pdfium-render"]
all = ["cpsl-core/all", "pdfium-render", "webbrowser"]

[dependencies]
cpsl-core = { path = "../core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
libloading = "0.8"
tempfile = "3"
