[package]
name = "native-http"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSURLSession",
    "NSURLRequest",
    "NSURLResponse",
    "NSData",
    "NSString",
    "NSDictionary",
    "NSError",
] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking", "native-tls"] }

[dev-dependencies]
