[package]
name = "native-http"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSURLSession",
    "NSURLRequest",
    "NSURLResponse",
    "NSData",
    "NSString",
    "NSDictionary",
    "NSError",
] }

[target.'cfg(all(not(target_os = "macos"), not(target_os = "emscripten")))'.dependencies]
reqwest = { version = "0.12", features = ["blocking", "native-tls"] }

[target.'cfg(target_os = "emscripten")'.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
