[package]
name = "native-webview-pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSData",
    "NSError",
    "NSString",
    "NSURL",
    "NSThread",
    "NSRunLoop",
    "NSDate",
] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-web-kit = { version = "0.3", features = [
    "WKWebView",
    "WKWebViewConfiguration",
    "WKPDFConfiguration",
    "WKNavigation",
    "WKNavigationDelegate",
    "block2",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSView",
    "NSResponder",
] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit6 = "0.6"

[[test]]
name = "smoke"
harness = false

[dev-dependencies]
